Training: - Model iterated 3000 times with loss values reaching as low as 0.01

--- a/gpt_v1.ipynb
+++ b/gpt_v1.ipynb
@@ -170,21 +170,21 @@
      "text": [
       "inputs:\n",
       "torch.Size([32, 128])\n",
-      "tensor([[3064, 3065, 3066,  ..., 3189, 3190, 3191],\n",
-      "        [4170, 4171, 4172,  ..., 4295, 4296, 4297],\n",
-      "        [3998, 3999, 4000,  ..., 4123, 4124, 4125],\n",
+      "tensor([[3112, 3113, 3114,  ..., 3237, 3238, 3239],\n",
+      "        [2758, 2759, 2760,  ..., 2883, 2884, 2885],\n",
+      "        [2637, 2638, 2639,  ..., 2762, 2763, 2764],\n",
       "        ...,\n",
-      "        [2244, 2245, 2246,  ..., 2369, 2370, 2371],\n",
-      "        [4008, 4009, 4010,  ..., 4133, 4134, 4135],\n",
-      "        [2141, 2142, 2143,  ..., 2266, 2267, 2268]], device='cuda:0')\n",
+      "        [2813, 2814, 2815,  ..., 2938, 2939, 2940],\n",
+      "        [ 694,  695,  696,  ...,  819,  820,  821],\n",
+      "        [1628, 1629, 1630,  ..., 1753, 1754, 1755]], device='cuda:0')\n",
       "targets:\n",
-      "tensor([[3065, 3066, 3067,  ..., 3190, 3191, 3192],\n",
-      "        [4171, 4172, 4173,  ..., 4296, 4297, 4298],\n",
-      "        [3999, 4000, 4001,  ..., 4124, 4125, 4126],\n",
+      "tensor([[3113, 3114, 3115,  ..., 3238, 3239, 3240],\n",
+      "        [2759, 2760, 2761,  ..., 2884, 2885, 2886],\n",
+      "        [2638, 2639, 2640,  ..., 2763, 2764, 2765],\n",
       "        ...,\n",
-      "        [2245, 2246, 2247,  ..., 2370, 2371, 2372],\n",
-      "        [4009, 4010, 4011,  ..., 4134, 4135, 4136],\n",
-      "        [2142, 2143, 2144,  ..., 2267, 2268, 2269]], device='cuda:0')\n"
+      "        [2814, 2815, 2816,  ..., 2939, 2940, 2941],\n",
+      "        [ 695,  696,  697,  ...,  820,  821,  822],\n",
+      "        [1629, 1630, 1631,  ..., 1754, 1755, 1756]], device='cuda:0')\n"
      ]
     }
    ],
@@ -476,20 +476,7 @@
    "execution_count": 9,
    "id": "a048acb2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step: 0, train loss: 8.520, val loss: 8.522\n",
-      "step: 100, train loss: 7.193, val loss: 7.196\n",
-      "step: 200, train loss: 5.553, val loss: 5.556\n",
-      "step: 300, train loss: 4.081, val loss: 4.078\n",
-      "step: 400, train loss: 2.845, val loss: 2.845\n",
-      "step: 500, train loss: 1.865, val loss: 1.857\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a PyTorch optimizer\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr=learning_rate)\n",
@@ -510,22 +497,26 @@
     "    optimizer.step()\n",
     "print(loss.item())\n",
     "\n",
-    "with open('model-01.pkl', 'wb') as f:\n",
+    "with open('model-01.2.pkl', 'wb') as f:\n",
     "    pickle.dump(model, f)\n",
     "print('model saved')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "e6ad97f2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello ! Can you see me ? A AGAIN AIR ALL AND ANOTHER ARE ARRIVAL AUTHOR About Accuser Adjustable After Afterward Ah Ahem All Alluring Almost Also Am Ambroise America American An And Angeles Animals Another Anu Any Anyhow Anyone Arabian Are Armies Army Around As Assorted At Athletic Athletics Atlantis Aunt Australia Away Awful B BAUM BEARS BEING BELT BLACK BOOKS BOY BRAIDED BUGGY BY Bah Bailum Band Banner Barney Baum Be Bears Beasts Because Before Behind Behold Being Below Belt Besides Bill Billina Black Blackness Book Breakfast Bug Buggy Bush But By CAB CHAPTER CHAPTERS CITY CLOUD CO COME COPYRIGHT CORONADO COURT CUT Cab California\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
