Training: - Completed training GPT v1

--- a/gpt_v1.ipynb
+++ b/gpt_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f326447b-28a7-4c70-a1af-490f85a61c54",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "338579f0-c6a4-4061-9bf1-018ebec05f74",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "41115646",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e1f1200c-3de3-4872-80d0-c4eda375b0a3",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "296632bd",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6bc3bbc5-c695-47c1-b3d4-33fdcdcf5650",
    "metadata": {},
    "outputs": [
@@ -170,21 +170,21 @@
      "text": [
       "inputs:\n",
       "torch.Size([32, 128])\n",
-      "tensor([[3112, 3113, 3114,  ..., 3237, 3238, 3239],\n",
-      "        [2758, 2759, 2760,  ..., 2883, 2884, 2885],\n",
-      "        [2637, 2638, 2639,  ..., 2762, 2763, 2764],\n",
+      "tensor([[ 156,  157,  158,  ...,  281,  282,  283],\n",
+      "        [2137, 2138, 2139,  ..., 2262, 2263, 2264],\n",
+      "        [1941, 1942, 1943,  ..., 2066, 2067, 2068],\n",
       "        ...,\n",
-      "        [2813, 2814, 2815,  ..., 2938, 2939, 2940],\n",
-      "        [ 694,  695,  696,  ...,  819,  820,  821],\n",
-      "        [1628, 1629, 1630,  ..., 1753, 1754, 1755]], device='cuda:0')\n",
+      "        [2399, 2400, 2401,  ..., 2524, 2525, 2526],\n",
+      "        [1595, 1596, 1597,  ..., 1720, 1721, 1722],\n",
+      "        [3904, 3905, 3906,  ..., 4029, 4030, 4031]], device='cuda:0')\n",
       "targets:\n",
-      "tensor([[3113, 3114, 3115,  ..., 3238, 3239, 3240],\n",
-      "        [2759, 2760, 2761,  ..., 2884, 2885, 2886],\n",
-      "        [2638, 2639, 2640,  ..., 2763, 2764, 2765],\n",
+      "tensor([[ 157,  158,  159,  ...,  282,  283,  284],\n",
+      "        [2138, 2139, 2140,  ..., 2263, 2264, 2265],\n",
+      "        [1942, 1943, 1944,  ..., 2067, 2068, 2069],\n",
       "        ...,\n",
-      "        [2814, 2815, 2816,  ..., 2939, 2940, 2941],\n",
-      "        [ 695,  696,  697,  ...,  820,  821,  822],\n",
-      "        [1629, 1630, 1631,  ..., 1754, 1755, 1756]], device='cuda:0')\n"
+      "        [2400, 2401, 2402,  ..., 2525, 2526, 2527],\n",
+      "        [1596, 1597, 1598,  ..., 1721, 1722, 1723],\n",
+      "        [3905, 3906, 3907,  ..., 4030, 4031, 4032]], device='cuda:0')\n"
      ]
     }
    ],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e04ec500",
    "metadata": {},
    "outputs": [],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ef7221f3-ce29-491c-ae9e-7d823c98fc6a",
    "metadata": {},
    "outputs": [],
@@ -473,10 +473,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a048acb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step: 0, train loss: 8.522, val loss: 8.520\n",
+      "step: 100, train loss: 7.193, val loss: 7.194\n",
+      "step: 200, train loss: 5.548, val loss: 5.542\n",
+      "step: 300, train loss: 4.078, val loss: 4.079\n",
+      "step: 400, train loss: 2.842, val loss: 2.847\n",
+      "step: 500, train loss: 1.856, val loss: 1.855\n",
+      "step: 600, train loss: 1.140, val loss: 1.136\n",
+      "step: 700, train loss: 0.694, val loss: 0.695\n",
+      "step: 800, train loss: 0.436, val loss: 0.436\n",
+      "step: 900, train loss: 0.296, val loss: 0.294\n",
+      "step: 1000, train loss: 0.211, val loss: 0.211\n",
+      "step: 1100, train loss: 0.160, val loss: 0.158\n",
+      "step: 1200, train loss: 0.124, val loss: 0.125\n",
+      "step: 1300, train loss: 0.100, val loss: 0.100\n",
+      "step: 1400, train loss: 0.083, val loss: 0.083\n",
+      "step: 1500, train loss: 0.068, val loss: 0.068\n",
+      "step: 1600, train loss: 0.058, val loss: 0.059\n",
+      "step: 1700, train loss: 0.050, val loss: 0.050\n",
+      "step: 1800, train loss: 0.043, val loss: 0.043\n",
+      "step: 1900, train loss: 0.039, val loss: 0.039\n",
+      "step: 2000, train loss: 0.034, val loss: 0.033\n",
+      "step: 2100, train loss: 0.030, val loss: 0.030\n",
+      "step: 2200, train loss: 0.027, val loss: 0.027\n",
+      "step: 2300, train loss: 0.024, val loss: 0.024\n",
+      "step: 2400, train loss: 0.022, val loss: 0.022\n",
+      "step: 2500, train loss: 0.020, val loss: 0.020\n",
+      "step: 2600, train loss: 0.018, val loss: 0.018\n",
+      "step: 2700, train loss: 0.016, val loss: 0.017\n",
+      "step: 2800, train loss: 0.015, val loss: 0.015\n",
+      "step: 2900, train loss: 0.014, val loss: 0.014\n",
+      "0.019368458539247513\n"
+     ]
+    }
+   ],
    "source": [
     "# create a PyTorch optimizer\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr=learning_rate)\n",
@@ -495,28 +533,40 @@
     "    optimizer.zero_grad(set_to_none=True)\n",
     "    loss.backward()\n",
     "    optimizer.step()\n",
-    "print(loss.item())\n",
-    "\n",
-    "with open('model-01.2.pkl', 'wb') as f:\n",
+    "print(loss.item())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9300deb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('G:/PROJECT_WORKS/fcc-gpt/model-01.2.pkl', 'wb') as f:\n",
     "    pickle.dump(model, f)\n",
     "print('model saved')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "e6ad97f2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello ! Can you see me ? A AGAIN AIR ALL AND ANOTHER doesn dog doing dollars dolls domain dome domed domes don done donkey doom door doors doorway doorways dotting double doubt doubtfully doubtless doubts doughnuts down downward doze dozen dozens drag dragged dragon dragonette dragonettes dragons draw drawing drawled drawn draws dre dread dreadful dreadfully dreamed dress dressed dressing drew dripping drive driven driveway Flop Flutters Fly Flying Folks products progress projected promise promised promoted promptly proof proper properly propose proposed protect protection protest protested protruding proud proudest proudly prove proved proves provoked public puffed pull pulled pulling punished punishment pure purple purred purring pursue\n"
      ]
     }
    ],
