--- a/huggingface_data_downloader.ipynb
+++ b/huggingface_data_downloader.ipynb
@@ -2,18 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be423394c1314ce4ac8dd58ba4ab1253",
+       "model_id": "2ac2531e95134099ace1b0d8e729d982",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Downloading data:   0%|          | 0/21 [00:00<?, ?files/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error while downloading from https://huggingface.co/datasets/Skylion007/openwebtext/resolve/main/subsets/urlsf_subset14.tar: HTTPSConnectionPool(host='cdn-lfs.huggingface.co', port=443): Read timed out.\n",
+      "Trying to resume download...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec3b0654942a4e7380559007ca1a3b54",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/8013769 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b8e377059fcf4148b136961fdbbc3196",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading dataset shards:   0%|          | 0/80 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -24,11 +60,12 @@
     "import os\n",
     "from datasets import load_dataset\n",
     "\n",
-    "# Set the cache directory\n",
-    "os.environ['HF_DATASETS_CACHE'] = 'G:/PROJECT_WORKS/fcc-gpt/openwebtext/cache'\n",
+    "# Load the dataset with the trust_remote_code argument and specify the cache directory\n",
+    "dataset = load_dataset('Skylion007/openwebtext', trust_remote_code=True, cache_dir='G:/PROJECT_WORKS/fcc-gpt/openwebtext/cache')\n",
     "\n",
-    "# Load the dataset with the trust_remote_code argument\n",
-    "dataset = load_dataset('Skylion007/openwebtext', trust_remote_code=True)"
+    "\n",
+    "# Save the dataset to a local directory\n",
+    "dataset.save_to_disk('G:/PROJECT_WORKS/fcc-gpt/openwebtext')"
    ]
   },
   {
@@ -37,12 +74,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the dataset to a local directory\n",
-    "dataset.save_to_disk('G:/PROJECT_WORKS/fcc-gpt/openwebtext')\n",
+    "\n",
     "\n",
     "# Load the dataset back from the local directory\n",
     "# loaded_dataset = load_dataset('/path/to/save/imdb_dataset')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
